# choreographer

./: Choreographer.cabal  LICENSE
app/: Main.hs
examples/noname/: bac.choreo  bac.nn
examples/sapic+/: dh.choreo  dh.spthy  envelope.choreo  envelope.nn  envelope.spthy  envelope_simple.choreo  envelope_simple.spthy  envelope_simplified.choreo  envelope_simplified.spthy  key_ex_attempt1.choreo  key_ex_attempt1.spthy  key_ex_attempt2.choreo  key_ex_attempt2.spthy  key_ex_attempt3.choreo  key_ex_attempt3.spthy  key_ex_attempt3b.choreo  key_ex_attempt3b.spthy  key_ex_attempt4.choreo  key_ex_attempt4.spthy  key_ex_attempt5.choreo  key_ex_attempt5.spthy  nsl.choreo  nsl.spthy  nspk.choreo  nspk.spthy  test_b.choreo  test_b.spthy
src/: Examples.hs
src/Choreography/: Enricher.hs  Frame.hs  State.hs
src/Compiler/: Compiler.hs
src/Compiler/ToLocalBehavior/: CheckGenerator.hs  RecipeUtility.hs  TermRewriter.hs  Translation.hs
src/Compiler/ToLocalBehavior/TranslationCases/: Lock.hs  Receive.hs  Send.hs  StateHint.hs
src/Compiler/ToLocalBehavior/TranslationCases/AtomicParts/: Atomic.hs  Condition.hs  Nonce.hs  PrivacyExtension.hs  Read.hs  Unlock.hs  Write.hs
src/Compiler/ToNoname/ChoreoToNoname/: Compiler.hs  InitialContext.hs  InitialTransactions.hs
src/Compiler/ToNoname/ChoreoToNoname/TranslationSteps/: BranchingSendTranslation.hs  RedundantOperations.hs  RemoveSeq.hs  SeqLocalBehavior.hs  SeqToNoname.hs  SequentializeTranslation.hs  SwapOperations.hs
src/Compiler/ToNoname/Noname/: FilePrinter.hs  PrettyPrinter.hs  Syntax.hs
src/Compiler/ToSapicPlus/: CheckGenerator.hs  InitialKnowledgeDistributor.hs  PrettyPrinter.hs  RecipeUtility.hs  SFrame.hs  SecurityGoalUtility.hs  SyntacticSimplifier.hs  Translation.hs
src/Compiler/ToSapicPlus/RewriteSystem/: EquationalTheoryExtension.hs  RewriteReceipt.hs  RewriteSystem.hs  Rule.hs  TermRewriter.hs
src/Compiler/ToSapicPlus/TranslationCases/: AtomicCases.hs  Lock.hs  Receive.hs  Send.hs
src/Syntax/: Lexer.x  Parser.y  Util.hs
src/Types/: Choreography.hs  ChoreographyProtocolShell.hs  LocalBehavior.hs  Rewrite.hs  Sapic.hs  Signatures.hs  Simple.hs
test/: Main.hs
test/Choreo/: AnalysisTest.hs  ComposeTest.hs  FrameTest.hs  ParsingHelper.hs  ParsingTest.hs  TranslationTest.hs
test/ChoreoToNoname/TranslationSteps/: BranchingSendTranslationTest.hs  SequentializeTranslationTest.hs
test/Sapic/: Main.hs  SapicTranslation.hs  TermRewrite.hs  TranslationWithEquationalOperators.hs
